# oDocs

./: .gitignore  README.md  Token_generator copy.py  Token_generator.py  token_storage.ini
Linux-Serial-Client/: CMakeLists.txt  main.cpp
Linux_Client/: CMakeLists.txt  COMMANDS_DOCUMENTATION.md  README.md  config.h  enviroment_required.docx  install.sh  main.cpp  makefile  run.sh  session.cfg  ~$viroment_required.docx
Linux_Client/include/: config.h  error_handler.h  gantry_config.h  gantry_interface.h  otk_thread.h  renderer.h  video_processing.h
Linux_Client/libraries/libopentok_linux_llvm_x86_64/: CMakeLists.txt
Linux_Client/libraries/libopentok_linux_llvm_x86_64/docs/linux/: README.md  release-notes.md
Linux_Client/libraries/libopentok_linux_llvm_x86_64/docs/linux/reference/html/: annotated.html  audio__data_8h.html  audio__data_8h_source.html  audio__device_8h.html  audio__device_8h_source.html  audio__module__input__device_8h.html  audio__module__input__device_8h_source.html  audio__module__output__device_8h.html  audio__module__output__device_8h_source.html  base_8h.html  base_8h_source.html  camera__capture__resolution_8h.html  camera__capture__resolution_8h_source.html  classes.html  connection_8h.html  connection_8h_source.html  dir_5bf4e1e7754f85924dbbd8ed2fd823c8.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_93ffdfbd8e3a9a67091da64e2fa73a89.html  dir_ea75cd660b3020692252ae823ed5c04e.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  media__utils_8h.html  media__utils_8h_source.html  publisher_8h.html  publisher_8h_source.html  session_8h.html  session_8h_source.html  stream_8h.html  stream_8h_source.html  structotc__audio__data.html  structotc__audio__device__callbacks.html  (+25 more)
Linux_Client/libs/common/src/: gantry_interface.cpp  gantry_interface.h
Linux_Client/src/: error_handler.cpp  gantry_interface.cpp  main.cpp  otk_thread.c  otk_thread.cpp  renderer.cpp  video_processing.cpp
Python-Client/: README.md  Token_generator.py  g_code_sender.py  opencv_test.py  token_storage.ini
Web-Client/: README.md  doc.md  index.html  token_storage.ini
Web-Client/css/: app.css
Web-Client/js/: app.js  config.js
